@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007, 2008 Andreas Persson
+ * Copyright (C) 2007 - 2015 Andreas Persson
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -43,6 +43,7 @@ class LinuxSamplerPlugin : public LinuxSampler::InstrumentEditor {
         void __onSamplesToBeRemoved(std::list<gig::Sample*> lSamples);
         void __onVirtualKeyboardKeyHit(int Key, int Velocity);
         void __onVirtualKeyboardKeyReleased(int Key, int Velocity);
+        void __requestSamplerToSwitchInstrument(gig::Instrument* pInstrument);
         bool __onPollPeriod();
 };
 
